--- a/index.html
+++ b/index.html
@@ -130,7 +130,11 @@
   <section class="footer_banner" id="contact">
     <h2 class="hidden">Footer Banner Section </h2>
     <p class="hero_header">FOR THE LATEST NEWS &amp; UPDATES ON FACEBOOK</p>
-    <div class="button"><a href="https://facebook.com/groups/1012069212652909/">Click Here</a></div>
+      
+    <div class="button"><a href="https://facebook.com/groups/1012069212652909/">Click Here</a></div> 
+      
+    <div class="button"><a href="https://paypal.me/MoletsaneFoundation1?country.x=ZA&locale.x=en_US">Donate</a></div>
+      <p class="hero_header">  <img src="images/paypall.jpg" class="profile" width="100px"/></p>
   </section>
   <!-- Copyrights Section -->
   <div class="copyright">2022-Reg No 21/365122 1239 <p>Moletsane Foundation(NPO)</p></div>
